--- a/code/dichotomic_search.ipynb
+++ b/code/dichotomic_search.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,12 +43,13 @@
     }
    ],
    "source": [
+    "import math\n",
     "print(math.log2(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for n=10, dichotomic search is 3  times faster\n"
+      "for n=111, dichotomic search is 16  times faster\n"
      ]
     }
    ],
    "source": [
-    "compare_linear_dichotomic(10)"
+    "compare_linear_dichotomic(111)"
    ]
   },
   {
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
