edit insertion sort

--- a/code/complexity/insertion_sort/complexity.ipynb
+++ b/code/complexity/insertion_sort/complexity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "Text(17.20000000000001, 0.5, 'average number of operations to perform insertion sort')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -43,7 +43,9 @@
     "from IPython import display\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from insertion_sort import insertionSort\n",
+    "import insertion_sort\n",
+    "from importlib import reload\n",
+    "reload(insertion_sort)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -70,7 +72,7 @@
     "    counters = list()\n",
     "    for test in range(number_of_tests):\n",
     "        uniform_llist = np.random.randint(0, 1001, n)\n",
-    "        counters.append(insertionSort(uniform_llist, verbose=False))\n",
+    "        counters.append(insertion_sort.insertionSort(uniform_llist, verbose=False))\n",
     "    average = sum(counters)/number_of_tests\n",
     "    print(f\"for n={n}, {average} operations \" +\n",
     "          f\"performed on average on {number_of_tests} instances.\")\n",
